--- a/dev/src/index.css
+++ b/dev/src/index.css
@@ -1,6 +1,9 @@
 body {
-  margin-top: 0px;
-  margin-left: 0px;
+  display: flex;
+  flex-direction: column;
+
+  margin: 0;
+
   width: 100%;
   height: 100%;
 }
