--- a/dev/src/landing-page.css
+++ b/dev/src/landing-page.css
@@ -1,20 +1,55 @@
+@import url("https://fonts.googleapis.com/css?family=Noto+Sans+TC&display=swap");
+
+.landing-background {
+  background: rgba(57, 134, 134);
+  
+  width: 100%;
+  height: 100vh;
+}
+
 .landing-container {
+  flex: 1;
   display: flex;
   justify-content: center;
   align-items: center;
+
+  width: 100%;
+  height: 100%;
 }
 
 .name-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   position: absolute;
   top: 0;
   left: 0;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: green;
+  margin: 0;
+  padding: 0;
+
+  height: 100%;
+  width: 100%;
+
+  background: rgba(255, 255, 255, 0)
 }
 
 .name {
-  background: blue;
+  color: white;
+
+  padding: 0;
+  margin: 0;
+
+  font-family: 'Noto Sans TC', sans-serif;
+  font-size: 2em;
+}
+
+.centered {
+  display: flex;
+  align-items: center;
+}
+
+.invisible {
+  visibility: hidden;
 }
