--- a/dev/src/nav-bar.css
+++ b/dev/src/nav-bar.css
@@ -1,31 +1,31 @@
-@import url("https://fonts.googleapis.com/css?family=Noto+Sans+TC&display=swap");
+/* @import url("https://fonts.googleapis.com/css?family=Noto+Sans+TC&display=swap"); */
+
 .bar {
   position: fixed;
-  top: -5em;
 
   display: flex;
   justify-content: center;
   align-items: center;
 
   width: 100%;
-  height: 5em;
+  height: 10vh;
 
-  background: #525252;
+  background: #313131;
 
-  transition: all 250ms;
+  /* transition: all 500ms; */
 }
 
-.bar-show {
-  transform: translate(0px, 5em);
+/* .bar-show {
+  transform: translate(0px, 10vh);
 }
 
 .bar-hide {
-  transform: translate(0px, -5em);
-}
+  transform: translate(0px, -10vh);
+} */
 
 .title-name {
   color: white;
 
   font-family: 'Noto Sans TC', sans-serif;
-  font-size: 2em;
+  font-size: 4rem;
 }
