--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,20 +6,21 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #0042a5;
+  --ifm-color-primary: #6ea8ff;
   --ifm-color-primary-dark: #29784c;
   --ifm-color-primary-darker: #277148;
   --ifm-color-primary-darkest: #205d3b;
   --ifm-color-primary-light: #33925d;
   --ifm-color-primary-lighter: #359962;
   --ifm-color-primary-lightest: #3cad6e;
+  /* --ifm-link-color: black; */
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
+  --ifm-color-primary: #6ea8ff;
   --ifm-color-primary-dark: #21af90;
   --ifm-color-primary-darker: #1fa588;
   --ifm-color-primary-darkest: #1a8870;
@@ -43,10 +44,32 @@
   }
 }
 
-.hover-opacity {
-  transition: 0.3s ease;
+@-webkit-keyframes bounceAnimation {
+  0% {
+    margin-top: 0px;
+  }
+
+  50% {
+    margin-top: 5px;
+  }
+
+  100% {
+    margin-top: 0px;
+  }
 }
 
-.hover-opacity:hover {
-  transform: scale(1.01);
+.blog-list-page h2[class*="title"]
+{
+  font-size: 2rem;
+}
+
+.blog-list-page h2[class*="title"] a
+{
+  color: var(--ifm-font-color-base);
+}
+
+.blog-list-page span[class*="authorName"]
+{
+  font-size: 1rem;
+  color: var(--ifm-font-color-base);
 }
