--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -7,26 +7,27 @@
 /* You can override the default Infima variables here. */
 :root {
   --ifm-color-primary: #6ea8ff;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary-dark: #4d95f6;
+  --ifm-color-primary-darker: #357dd6;
+  --ifm-color-primary-darkest: #265f9e;
+  --ifm-color-primary-light: #92c2ff;
+  --ifm-color-primary-lighter: #b5d7ff;
+  --ifm-color-primary-lightest: #e5f1ff;
   /* --ifm-link-color: black; */
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
+
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
   --ifm-color-primary: #6ea8ff;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary-dark: #a7cdff;
+  --ifm-color-primary-darker: #d1e6ff;
+  --ifm-color-primary-darkest: #eaf4ff;
+  --ifm-color-primary-light: #8ec0ff;
+  --ifm-color-primary-lighter: #b5d7ff;
+  --ifm-color-primary-lightest: #e5f1ff;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
@@ -59,20 +60,17 @@
 }
 
 .blog-list-page h2[class*="title"],
-.blog-tags-post-list-page h2[class*="title"]
-{
+.blog-tags-post-list-page h2[class*="title"] {
   font-size: 2rem;
 }
 
 .blog-list-page h2[class*="title"] a,
-.blog-tags-post-list-page h2[class*="title"] a
-{
+.blog-tags-post-list-page h2[class*="title"] a {
   color: var(--ifm-font-color-base);
 }
 
 .blog-list-page span[class*="authorName"],
-.blog-tags-post-list-page span[class*="authorName"]
-{
+.blog-tags-post-list-page span[class*="authorName"] {
   font-size: 1rem;
   color: var(--ifm-font-color-base);
 }
